# can-your-chatbot-run-kubectl

./: .gitignore  CLAUDE.md  PROJECT_STATE.md  README.md  pyproject.toml
.claude/: README.md
.claude/commands/: burritbot-cast-net.md  burritbot-phase.md  burritbot-validate.md  deinopis-cast-net.md  deinopis-phase.md  deinopis-validate.md
.claude/skills/: burritbot-architecture.md  burritbot-vertex-ai.md  cast-net-toggle.md  deinopis-architecture.md  the-eyes-otel-genai.md  the-net-ai-gateway.md  the-net-kyverno-burritbot.md  the-net-kyverno-deinopis.md
ai-gateway/envoy/: gateway.yaml
ai-gateway/llm-guard/: config.yaml
ai-gateway/nemo-guardrails/: config.yaml
apps/burritbot/: Dockerfile  app.py  (+1 more)
chatbot-research/: .gitignore  RUN-LOCAL.md  research.py  summary.md  targets.yaml
docs/: BUILD-INSTRUCTIONS.md  CFP-SUBMISSION.md  CRITICAL-FIXES-PLAN.md  KUBEAUTO-REUSE-MAP.md  PLAN.md  RUNBOOK.md  SCORECARD.md
scripts/: cast-net.sh  teardown.sh
spec/: BUILD-SPEC.md  SCORECARD.md
tests/: __init__.py  conftest.py  test_chatbot_research.py  test_critical_fix_a1_argocd_paths.py  test_critical_fix_a2_service_accounts.py  test_critical_fix_a3_audience_dockerfile.py  test_critical_fix_a4_colang_alignment.py  test_critical_fix_a5_otel_app_wired.py  test_critical_fix_a5_otel_unguarded_env.py  test_critical_fix_a6_project_state_truthful.py  test_phase_01_foundation.py  test_phase_02_gitops.py  test_phase_03_the_eyes.py  test_phase_04_the_net_security.py  test_phase_05_the_net_gateway.py  test_phase_06_burritbot.py  test_phase_07_frontend.py  test_phase_08_hardening.py
(+126 files in other folders)
